--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,20 @@
-/vendor/
+# 모든 파일과 폴더를 먼저 무시
+/*
+
+# public 폴더만 추적
+!/public/
+
+# 기본 제외 항목
 .env
 .vscode/
+/vendor/
 composer.lock
 *.log
+*.sql
 node_modules/
 npm-debug.log
 yarn-debug.log*
 yarn-error.log*
-*.sql
-db.sql
+
+# composer.json은 추적
+!composer.json
